--- a/src/LiurenSentient/LrsWebsite/wwwroot/index.html
+++ b/src/LiurenSentient/LrsWebsite/wwwroot/index.html
@@ -1,18 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
+﻿<!DOCTYPE html>
+<html lang="ch">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>LrsWebsite</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/app.css" rel="stylesheet" />
+
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>六壬吾心</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Noto%20Serif" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link href="app.css" rel="stylesheet" />
+    <!--
+        <link href="LrsWebsite.styles.css" rel="stylesheet" />
+    -->
+
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="LrsWebsite.styles.css" rel="stylesheet" />
+    <link rel="apple-touch-icon" sizes="512x512" href="favicon.png" />
+
     <link href="manifest.json" rel="manifest" />
-    <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
-    <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
 </head>
 
 <body>
@@ -25,11 +32,10 @@
     </div>
 
     <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
+        发生了错误。刷新重试或许可以解决。
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
 
